# void-shrine-semantic-explorer

./: .env  .env.example  AESTHETIC_COHERENCE.md  CLAUDE.md  COMPREHENSIVE_HALF_YEAR_SUMMARY.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  ONTOLOGY.md  PROJECT_CONSTITUTION.md  README.md  SEMANTIC_GRAPH_DEPLOYMENT.md  Tabula_Smaragdina.md  agents.html  build.sh  chaos-deployment.md  deps.edn  entropy-gallery.clj  index.html  mcp_service.py  predict_o_matic_ui.html  prediction_engine.py  secrets-manager.js  semantic_graph_engine.py  semantic_graph_simple.py  semantic_graph_ui.html  shadow-realm.js  simple-gallery.clj  test_semantic_graph.py  test_system.py  unified_dashboard.html
.cpcache/: 204149264.basis  204149264.cp  2057173666.basis  2057173666.cp  2057173666.main
entropy-gallery/: README.md  project.clj
entropy-gallery/src/entropy_gallery/: core.clj  core_unified.clj  extended_ontology.clj  live_gallery.clj  plumbed_simple.clj  plumbed_working_backup.clj  simple_working.clj  web.clj  web_broken.clj  working_sources.clj
flamechart-production/: README.md  project.clj
flamechart-production/resources/: flamechart.js
flamechart-production/src/flamechart/: analysis.clj  config.clj  core.clj  profiler.clj  sampling.clj  server.clj
production/: deploy.sh  nginx.conf  void-shrine.service
src/: lib.rs  mcp_server.rs  rag_engine.rs
src/entropy_gallery/: test_gallery.clj  working_test.clj
src/void_shrine/: core.cljc
src/void_shrine/chaos/: bloomed_ontology.clj  bloomed_traversal.clj  ontology.clj  (+2 more)
test/void_shrine/: test_runner.clj
(+16 files in other folders)
