[package]
name = "void-shrine-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server"
path = "src/mcp_server.rs"

[[bin]]
name = "rag-engine"
path = "src/rag_engine.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dashmap = "5.0"
futures = "0.3"

# RAG-specific dependencies (simplified)
sqlite = "0.34"
regex = "1.10"

# Void Shrine specific
rand = "0.8"